Finish most of 'Course' section, with the exception of spacing issues.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,6 @@ html{
 }
 .content{
     display: flex;
-    width: 100%;
     align-items: center;
     padding: 1.875rem;
 }
@@ -18,6 +17,7 @@ h1{
 h3{
     font-size: 1.5rem;
     font-family: "Cabin", sans-serif;
+    font-weight: bold;
 }
 /* Header */
 header{
@@ -26,6 +26,7 @@ header{
     width: 100%;
     z-index: 1;
     background-color: white;
+    border-bottom: solid #DADBE5 1px;
 }
 header .logo{
     display: flex;
@@ -55,15 +56,19 @@ nav li{
     padding-top: 4rem;
     background-color: #DADBE5;
 }
-#banner{
-    width: 60%;
+.banner-image{
+    max-width: 60%;
+    height: auto;
     padding: 2rem 2.5rem 2rem 1.5rem;
+}
+#banner{
+    width: 100%;
+    height: auto;
 }
 .learn{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 25%;
     padding: 0.5rem;
 }.learn h1,
  h3{
@@ -82,11 +87,9 @@ nav li{
 /* Practice Info */
 .practice{
     display: flex;
-    width: 100%;
-    padding-left: 1.875rem;
+    margin-bottom: 1.5rem;
 }
 .practice-left{
-    width: 60%;
     flex-direction: column;
     padding-left: 1.875rem;
 }
@@ -94,15 +97,19 @@ nav li{
 p{
     margin-bottom: 1.5rem;
 }
+.practice-image{
+    max-width: 87%;
+    height: auto;
+    margin: 2rem 1.5rem;
+}
 #study{
-    width: 60%;
-    padding: 2rem 1.5rem;
+    width: 100%;
+    height: auto;
 }
 .practice-right{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40%;
     border-left: solid #DADBE5 1px;
 }
 .info{
@@ -132,4 +139,30 @@ p{
 .border{
     padding-top: 0.5rem;
     border-bottom: solid #DADBE5 1px;
+}
+/* Courses */
+.courses{
+    background-color: #DADBE5;
+}
+.course-content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+#course-title{
+    text-align: center;
+    display: block;
+    padding: 2rem;
+}
+.course{
+    padding: 2rem;
+}
+.description{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem 1.5rem 1rem;
+    background-color: white;
+}
+.description span{
+    padding-top: 0.5rem;
 }
